--- a/templates/list.html
+++ b/templates/list.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <ul class="datasets">
+    <ul class="datasets">
     {% for d in datapackages %}
-      <li>
-				<h3>{{ d.title }} <span><a href="/datasets/{{ d.name }}.html">Detalhes</a> <a href="/download/{{ d.name }}.zip">Download</a></span></h3>
-      	<p>{{ d.description }}</p>
-      	<p class="source">{% if d.sources %} <em>Fontes:</em> {% for s in d.sources %}<a href="{{ s.web }}">{{ s.name }}</a> {% endfor %} {% endif %}</p>
-			</li>
+        <li>
+            <h3>
+                {{ d.title }}&nbsp;
+                <span>
+                    <a href="/datasets/{{ d.name }}.html">Detalhes</a>&nbsp;
+                    <a href="/download/{{ d.name }}.zip">Download</a>
+                </span>
+            </h3>
+            <p>{{ d.description }}</p>
+            <p class="source">
+                {% if d.sources %}
+                    <em>Fontes:</em>
+                    {% for s in d.sources %}
+                        <a href="{{ s.web }}">{{ s.name }}</a>
+                    {% endfor %}
+                {% endif %}
+            </p>
+        </li>
     {% endfor %}
-  </ul>
+    </ul>
 {% endblock content %}
 
