Fix jQuery path

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,6 @@
                 </ul>
             </div>
         </footer>
-        <script src="/js/vendor/jquery-1.11.0.min.js"></script>
+        <script src="/js/jquery-1.11.0.min.js"></script>
     </body>
 </html>
