--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,12 @@
                 </a>
             </div>
         </header>
+        <section class="search">
+            <div>
+                <span id="spinner"><img src="/img/ajax-loader.gif" alt="Loading..." title="Loading..." /></span>
+                <input id="search" type="text" placeholder="Search..." />
+            </div>
+        </section>
         <section class="row">
             <div>
                 <div class="description">
@@ -63,5 +69,7 @@
             </div>
         </footer>
         <script src="/js/jquery-1.11.0.min.js"></script>
+        <script src="/js/underscore-min.js"></script>
+        <script src="/js/search.js"></script>
     </body>
 </html>
