--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,6 @@
       <link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
-		<nav class="nav">
-			<div>
-				<ul>
-				  <li><a href="#">Acerca</a></li>
-				  <li><a href="#">FAQ</a></li>
-				</ul>
-			</div>
-		</nav>
 		<header class="header">
 			<div>
 				<a href="/">
@@ -27,12 +19,22 @@
 		</header>
 		<section class="row">
 			<div>
-				<div class="description">
-					<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do <a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday</a>.</p>
-					<p>Neste momento, os datasets que colocamos à disposição estão em formato CSV, mas estamos a trabalhar ativamente para poder fornecer outros formatos open data.</p>
-          <p>A Central de Dados é uma ferramenta livre, e todo o código que criámos está <a href="https://github.com/centraldedados/datacentral">disponível como software livre</a>. O projeto ainda está em construção, por isso agradecemos
-          imenso que nos sejam indicadas correções, sugestões e outros comentários no nosso <a href="https://github.com/centraldedados/datacentral/issues">tracker</a>.</p>
-				</div>
+				<div class="sidebar">
+					<div class="description">
+						<p>A Central de Dados é um repositório aberto de datasets <a href="#">Open Data em Portugal</a>. Os dados aqui publicados são provenientes de diversas fontes (sempre indicadas!) e estão sob a curadoria do <a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday</a>.</p>
+						<p>Neste momento, os datasets que colocamos à disposição estão em formato CSV, mas estamos a trabalhar ativamente para poder fornecer outros formatos open data.</p>
+		        <p>A Central de Dados é uma ferramenta livre, e todo o código que criámos está <a href="https://github.com/centraldedados/datacentral">disponível como software livre</a>. O projeto ainda está em construção, por isso agradecemos
+		        imenso que nos sejam indicadas correções, sugestões e outros comentários no nosso <a href="https://github.com/centraldedados/datacentral/issues">tracker</a>.</p>
+					</div>
+					<nav class="nav">
+						<div>
+							<ul>
+								<li><a href="#">Acerca</a></li>
+								<li><a href="#">FAQ</a></li>
+							</ul>
+						</div>
+					</nav>
+				</div><!-- /.sidebar -->
 				<div class="main">
 					{% block content %}{% endblock %}
 				</div>
