--- a/templates/base.html
+++ b/templates/base.html
@@ -28,15 +28,13 @@
                 </a>
             </div>
         </header>
-        <section class="search">
-            <div>
-                <span id="spinner"><img src="/img/ajax-loader.gif" alt="Loading..." title="Loading..." /></span>
-                <input id="search" type="text" placeholder="Search..." />
-            </div>
-        </section>
         <section class="row">
             <div>
                 <div class="description">
+                    <div class="search">
+                        <input id="search" type="text" placeholder="Pesquisar datasets..." />
+                        <span id="spinner"><img src="/img/ajax-loader.gif" alt="Loading..." title="Loading..." /></span>
+                    </div>
                     {{ welcome_text }}
                 </div>
                 <div class="main">
