Edited templates to fix HTML errors.

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
         </section>
         <footer class="footer row">
             <div>
-                <h4><a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday Portugal</a></h4></a>
+                <h4><a rel="external" href="http://transparenciahackday.org" title="Transparência Hackday">Transparência Hackday Portugal</a></h4>
                 <ul>
                     <li>com Apoio&nbsp;
                         <a rel="external" href="http://jplusplus.pt">
