Clumsily fix dataset page extension

--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,7 @@
             <h3>
                 {{ d.title }}&nbsp;
                 <span>
-                    <a href="/{{ d.name }}">Detalhes</a>&nbsp;
+                    <a href="/{{ d.name }}.html">Detalhes</a>&nbsp;
                     <a href="/{{ d.name }}.zip">Download</a>
                 </span>
             </h3>
