--- a/themes/centraldedados/static/css/main.css
+++ b/themes/centraldedados/static/css/main.css
@@ -132,12 +132,45 @@ body {
         line-height: 1.4;
 }
 
-h1 {  font-size: 2.25em;  font-family: 'Comme Thin'; margin-bottom: .5em;  }
-h2 {  font-size: 1.85em;     font-family: 'Comme Thin';  }
-h3 {  font-size: 1.625em; font-family: 'Comme Thin';  }
-h4 {  font-size: 1.375em; font-family: 'Comme Bold';  }
-h5 {  font-size: 1.25em;  font-family: 'Comme Thin';	}
-h6 {  font-size: 1.125em; font-family: 'Comme Thin';  }
+h1 {  
+  font-size: 2.25em;  
+  font-family: 'Comme Thin'; 
+  margin-bottom: .5em;  
+}
+
+h2 {  
+  font-size: 1.85em;     
+  font-family: 'Comme Medium';  
+  color: #888;
+  margin-top: 10px;
+  margin-bottom: 6px;
+}
+
+h3 {  
+  font-size: 1.625em; 
+  font-family: 'Comme Medium';  
+  color: #888;
+  margin-top: 10px;
+  margin-bottom: 6px;
+}
+
+h4 {  
+  font-size: 1.375em; 
+  font-family: 'Comme Medium';  
+  color: #888;
+  margin-top: 10px;
+  margin-bottom: 6px;
+}
+
+h5 {  
+  font-size: 1.25em;  
+  font-family: 'Comme Thin';	
+}
+
+h6 {  
+  font-size: 1.125em; 
+  font-family: 'Comme Thin';  
+}
 
 strong,
 .datasets h3 > span,
