--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -11,7 +11,7 @@
 
         <h4>Downloads</h4>
         {% for d in datapkg.datafiles %}
-        <h5>{{ d.title }} &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></h5>
+        <p>{{ d.title }} &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
 
         <h5>Campos</h5>
         <ul>
@@ -23,17 +23,18 @@
 
         <p><a href="{{ datapkg.repository }}">Ver o repositório Git</a></p>
 
-        <h6>Versão</h6>
-        <p>{{ datapkg.version }}</p>
 
-        <h6>Fontes</h6>
+        <h4>Detalhes</h4>
+        <p><strong>Versão</strong> {{ datapkg.version }}</p>
+        <p><strong>Licença</strong> {{ datapkg.license }}</p>
+        <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
+
+        <h4>Fontes</h4>
         <ul>
           {% for s in datapkg.sources %}
           <li><a href="{{ s.web }}">{{ s.name }}</a></li>
           {% endfor %}
         </ul>
-        <p>Licença: {{ datapkg.license }}</p>
-        <p>Última atualização: {{ datapkg.last_updated }}</p>
       </div>
 
       <div class="right-col">
