--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -16,26 +16,33 @@
         <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
         <p><a href="{{ datapkg.repository }}">Ver o repositório Git</a></p>
 
+        <hr>
+
         <h4>Downloads</h4>
         {% for d in datapkg.datafiles %}
-        <p>{{ d.title }} &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
+        <div class="datafile-box">
+          <p><strong>{{ d.title|upper }}</strong> &ndash; <a href="/{{ d.basename }}">CSV</a> &bull; <a href="/{{ d.basename.replace(".csv", ".json") }}">JSON</a></p>
+          <div class="datafile-fieldlist">
+            <h5>Campos</h5>
+            <ul>
+              {% for f in d.schema.fields %}
+              <li><strong>{{ f.name }}</strong> &ndash; {{ f.description }}</li>
+              {% endfor %}
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
 
-        <h5>Campos</h5>
-        <ul>
-          {% for f in d.schema.fields %}
-          <li><strong>{{ f.name }}</strong> &ndash; {{ f.description }}</li>
-          {% endfor %}
-        {% endfor %}
-        </ul>
+        <hr>
 
-
-
-        <h4>Fontes</h4>
-        <ul>
-          {% for s in datapkg.sources %}
-          <li><a href="{{ s.web }}">{{ s.name }}</a></li>
-          {% endfor %}
-        </ul>
+        <div class="sources">
+          <h4>Fontes</h4>
+          <ul>
+            {% for s in datapkg.sources %}
+            <li><a href="{{ s.web }}">{{ s.name }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
       </div>
 
       <div class="right-col">
