--- a/themes/centraldedados/templates/base.html
+++ b/themes/centraldedados/templates/base.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}Central de Dados{% endblock %}</title>
-    <meta name="description" content="Um repositório de datasets Open Data em Portugal">
+    <title>{% block title %}Datacentral{% endblock %}</title>
+    <meta name="description" content="An open dataset repository">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
   </head>
@@ -12,10 +12,9 @@
     <nav class="nav">
       <div>
         <ul>
-          <!--
-            <li><a href="#">Acerca</a></li>
-            <li><a href="#">FAQ</a></li>
-          -->
+            <li><a href="/about/">About</a></li>
+            <li><a href="/faq/">FAQ</a></li>
+            <li><a href="/contact/">Contact</a></li>
           <li><a href="/api.json">API</a></li>
         </ul>
       </div>
@@ -23,7 +22,7 @@
     <header class="header">
       <div>
         <a href="/">
-          <p><img src="/img/centraldedados.png" alt="Central de Dados" /></p>
+          <p><img src="/img/centraldedados.png" alt="Datacentral" /></p>
           <h1>Central de Dados</h1>
         </a>
       </div>
