Use homepage field instead of repository

--- a/themes/centraldedados/templates/dataset.html
+++ b/themes/centraldedados/templates/dataset.html
@@ -12,7 +12,7 @@
         <p><strong>Versão</strong> {{ datapkg.version }}</p>
         <p><strong>Licença</strong> {{ datapkg.license }}</p>
         <p><strong>Última atualização</strong> {{ datapkg.last_updated }}</p>
-        <p><a href="{{ datapkg.repository }}">Ver o repositório Git</a></p>
+        <p><a href="{{ datapkg.homepage }}">Ver no GitHub</a></p>
         <hr>
         <div class="downloads">
           <h4>Downloads</h4>
