Update list template

--- a/themes/centraldedados/templates/list.html
+++ b/themes/centraldedados/templates/list.html
@@ -4,35 +4,31 @@
 <section class="row">
   <div>
     <div class="description">
-      <div class="search">
-        <input id="search" type="text" placeholder="Pesquisar datasets..." />
-        <span id="spinner"><img src="/img/ajax-loader.gif" alt="Loading..." title="Loading..." /></span>
-      </div>
       {{ welcome_text }}
     </div>
     <div class="main">
+      <div class="search">
+        <input id="search" type="text" placeholder="Search datasets..." />
+        <span id="spinner"><img src="/img/ajax-loader.gif" alt="Loading..." title="Loading..." /></span>
+      </div>
       <ul class="datasets">
         <li class="notfound">
           No datasets found.
         </li>
         {% for d in datapackages %}
         <li class="dataset-{{ d.original_name }}">
-          <h3>
-            {{ d.title }}&nbsp;
-            <span>
-              <a href="/{{ d.name }}/">Detalhes</a>&nbsp;
-              <a href="/{{ d.name }}.zip">Download</a>
+          <a href="/{{ d.name }}/">
+            <h3>{{ d.title }}</h3>
+            <span>{{ d.description }}</span>
+            <span class="source">
+              {% if d.sources %}
+              <em>Sources:</em>
+              {% for s in d.sources %}
+                {{ s.name }}
+              {% endfor %}
+              {% endif %}
             </span>
-          </h3>
-          <p>{{ d.description }}</p>
-          <p class="source">
-          {% if d.sources %}
-          <em>Fontes:</em>
-          {% for s in d.sources %}
-          <a href="{{ s.web }}">{{ s.name }}</a>
-          {% endfor %}
-          {% endif %}
-          </p>
+          </a>
         </li>
         {% endfor %}
       </ul>
